--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -187,7 +187,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" routerLink="nursesmanagedashboard">מערכת דיווח סיעודית</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" *ngIf="_nursesSystemManage">
                                 <a class="nav-link" routerLink="systemmanage">ניהול מערכת דיווח</a>
                             </li>
                         </ul>
