--- a/src/app/fill-survey/signature-dialog.html
+++ b/src/app/fill-survey/signature-dialog.html
@@ -1,3 +1,3 @@
-<canvas class="row" #canvasinside id="canvasinside" style="border: 1px solid;width: 100%;touch-action: none;overscroll-behavior: none;"></canvas>
+<canvas class="row" #canvasinside id="canvasinside" style="border: 1px solid;width: 100%;"></canvas>
 <button mat-raised-button color="primary" style="text-align: right;margin-top: 3px;float: left;" type="button"
 	(click)="sendToForm()"><span>בצע</span></button>
