--- a/src/app/nurses-manage-dashboard/system-manage/system-manage.component.css
+++ b/src/app/nurses-manage-dashboard/system-manage/system-manage.component.css
@@ -2,3 +2,20 @@
     text-align: center;
     border-style: outset;
 }
+
+table td{
+    font-family: 'Math';
+    text-align: center;
+}
+table th{
+    font-family: 'Math';
+    font-size: 16px;
+    text-align: center;
+}
+table{
+    width: 100%;
+    height: 50px;
+}
+h2{
+    font-family: 'Math';
+}
