--- a/src/app/glucose/glucose.component.html
+++ b/src/app/glucose/glucose.component.html
@@ -240,7 +240,7 @@
             </td>
         </ng-container>
         <ng-container matColumnDef="PGR_Taking_Date">
-            <th mat-header-cell *matHeaderCellDef>תאריך צותאה</th>
+            <th mat-header-cell *matHeaderCellDef>תאריך תוצאה</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.PGR_Taking_Date }}
             </td>
