--- a/src/app/galit-points-report/galit-points-report.component.html
+++ b/src/app/galit-points-report/galit-points-report.component.html
@@ -1,6 +1,155 @@
-<mat-list role="list">
-    <div class="container">
-        <mat-list role="list">
+<div class="d-block pd-60">
+  <!-- <div class="row">
+    <div class="col">
+      <div dir="rtl" class="card w-85-p">
+        <div dir="rtl" class="card-body">
+          <form class="form">
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <mat-form-field>
+                    <label><b>חיפוש</b> - הקלד תעודת
+                      זהות</label>
+                    <input matInput autocomplete="off" [(ngModel)]="caseNumber" name="fliterVal" />
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+            <h4 class="searchingPatient" *ngIf="!patientFound"> מחפש נבדק ... </h4>
+            <button type="submit" mat-raised-button color="yello" (click)="getGalitReportPatient()">
+              <mat-icon>search</mat-icon>
+            </button>
+            &nbsp;&nbsp;&nbsp;
+            <button mat-raised-button color="yello" type="button" (click)="clearSearch()">
+              <mat-icon>clear</mat-icon>
+            </button>
+            &nbsp;&nbsp;&nbsp;
+          </form>
+        </div>
+        <mat-progress-bar mode="buffer" *ngIf="!patientFound"></mat-progress-bar>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="row mt-5" dir="rtl">
+    <div class="col">
+      <mat-form-field appearance="standard">
+        <mat-label>מסנן</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="הקלד מסנן" #input>
+      </mat-form-field>
+      <table mat-table [dataSource]="dataSource" dir="rtl" class="mat-elevation-z8">
+        <ng-container matColumnDef="CaseNumber">
+          <th mat-header-cell *matHeaderCellDef> מספר מקרה </th>
+          <td mat-cell *matCellDef="let element"> {{element.CaseNumber}} </td>
+        </ng-container>
+        <ng-container matColumnDef="DepartName">
+          <th mat-header-cell *matHeaderCellDef> מחלקה </th>
+          <td mat-cell *matCellDef="let element"> {{element.DepartName}} </td>
+        </ng-container>
+        <ng-container matColumnDef="PM_ROOM_NUMBER">
+          <th mat-header-cell *matHeaderCellDef> מספר חדר </th>
+          <td mat-cell *matCellDef="let element"> {{element.PM_ROOM_NUMBER}} </td>
+        </ng-container>
+        <ng-container matColumnDef="PatientFirstName">
+          <th mat-header-cell *matHeaderCellDef> שם פרטי </th>
+          <td mat-cell *matCellDef="let element"> {{element.PatientFirstName}} </td>
+        </ng-container>
+        <ng-container matColumnDef="PatientLastName">
+          <th mat-header-cell *matHeaderCellDef> שם משפחה </th>
+          <td mat-cell *matCellDef="let element"> {{element.PatientLastName}} </td>
+        </ng-container>
+        <ng-container matColumnDef="PM_PATIENT_GENDER">
+          <th mat-header-cell *matHeaderCellDef> מגדר </th>
+          <td mat-cell *matCellDef="let element"> {{element.PM_PATIENT_GENDER}} </td>
+        </ng-container>
+        <ng-container matColumnDef="DatesInHospital">
+          <th mat-header-cell *matHeaderCellDef> ימי אשפוז </th>
+          <td mat-cell *matCellDef="let element"> {{element.DatesInHospital}} </td>
+        </ng-container>
+        <ng-container matColumnDef="AnotherHospital">
+          <th mat-header-cell *matHeaderCellDef> בי"ח אחר </th>
+          <td mat-cell *matCellDef="let element"> {{element.AnotherHospital}} </td>
+        </ng-container>
+        <ng-container matColumnDef="ICD9Surgery">
+          <th mat-header-cell *matHeaderCellDef> ניתוח </th>
+          <td mat-cell *matCellDef="let element"> {{element.ICD9Surgery}} </td>
+        </ng-container>
+        <ng-container matColumnDef="ICD9Anamniza">
+          <th mat-header-cell *matHeaderCellDef> אבחנה </th>
+          <td mat-cell *matCellDef="let element"> {{element.ICD9Anamniza}} </td>
+        </ng-container>
+        <ng-container matColumnDef="DifferenceInStayDays">
+          <th mat-header-cell *matHeaderCellDef> הפרש ימי אשפוז </th>
+          <td mat-cell *matCellDef="let element"> {{element.DifferenceInStayDays}} </td>
+        </ng-container>
+        <ng-container matColumnDef="AGE">
+          <th mat-header-cell *matHeaderCellDef> גיל </th>
+          <td mat-cell *matCellDef="let element"> {{element.AGE}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Albomin">
+          <th mat-header-cell *matHeaderCellDef> אלבומין </th>
+          <td mat-cell *matCellDef="let element"> {{element.Albomin}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Norton">
+          <th mat-header-cell *matHeaderCellDef> נורטון </th>
+          <td mat-cell *matCellDef="let element"> {{element.Norton}} </td>
+        </ng-container>
+        <ng-container matColumnDef="ThroughInput">
+          <th mat-header-cell *matHeaderCellDef> דרך הזנה </th>
+          <td mat-cell *matCellDef="let element"> {{element.ThroughInput}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Iv">
+          <th mat-header-cell *matHeaderCellDef> הזנה דרך וריד </th>
+          <td mat-cell *matCellDef="let element"> {{element.Iv}} </td>
+        </ng-container>
+        <ng-container matColumnDef="HowToEat">
+          <th mat-header-cell *matHeaderCellDef> דרך האכלה</th>
+          <td mat-cell *matCellDef="let element"> {{element.HowToEat}} </td>
+        </ng-container>
+        <ng-container matColumnDef="DietType">
+          <th mat-header-cell *matHeaderCellDef> סוג דיאטה </th>
+          <td mat-cell *matCellDef="let element"> {{element.DietType}} </td>
+        </ng-container>
+        <ng-container matColumnDef="TextureFood">
+          <th mat-header-cell *matHeaderCellDef> סוג האכלה </th>
+          <td mat-cell *matCellDef="let element"> {{element.TextureFood}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Desctiption">
+          <th mat-header-cell *matHeaderCellDef> מצב עור </th>
+          <td mat-cell *matCellDef="let element"> {{element.Desctiption}} </td>
+        </ng-container>
+        <ng-container matColumnDef="BMI">
+          <th mat-header-cell *matHeaderCellDef> BMI </th>
+          <td mat-cell *matCellDef="let element"> {{element.BMI}} </td>
+        </ng-container>
+        <ng-container matColumnDef="MUST">
+          <th mat-header-cell *matHeaderCellDef> MUST </th>
+          <td mat-cell *matCellDef="let element"> {{element.MUST}} </td>
+        </ng-container>
+        <ng-container matColumnDef="STAMP">
+          <th mat-header-cell *matHeaderCellDef> STAMP </th>
+          <td mat-cell *matCellDef="let element"> {{element.STAMP}} </td>
+        </ng-container>
+        <ng-container matColumnDef="WieghtLoss">
+          <th mat-header-cell *matHeaderCellDef> ירידה במשקל </th>
+          <td mat-cell *matCellDef="let element"> {{element.WieghtLoss}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Points">
+          <th mat-header-cell *matHeaderCellDef> ציון </th>
+          <td mat-cell *matCellDef="let element"> {{element.Points}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <div class="row text-center">
+        <div class="col">
+          <h1 *ngIf="!patientFound"> ...אוסף נתונים, נא להמתין</h1>
+        </div>
+      </div>
+      <mat-progress-bar mode="buffer" *ngIf="!patientFound"></mat-progress-bar>
+
+      <!-- <mat-list role="list">
         <mat-list-item role="listitem">DepartName: {{patient.DepartName}}</mat-list-item>
         <mat-list-item role="listitem">PM_ROOM_NUMBER: {{patient.PM_ROOM_NUMBER}}</mat-list-item>
         <mat-list-item role="listitem">CaseNumber: {{patient.CaseNumber}}</mat-list-item>
@@ -26,6 +175,7 @@
         <mat-list-item role="listitem">STAMP: {{patient.STAMP}}</mat-list-item>
         <mat-list-item role="listitem">WieghtLoss: {{patient.WieghtLoss}}</mat-list-item>
         <mat-list-item role="listitem">Points: {{patient.Points}}</mat-list-item>
-      </mat-list>
+      </mat-list> -->
     </div>
-    
+  </div>
+</div>
