--- a/src/app/galit-points-report/galit-points-report.component.css
+++ b/src/app/galit-points-report/galit-points-report.component.css
@@ -11,3 +11,14 @@
     font-size: 14px;
     width: 100%;
   }
+  td.mat-cell{
+    padding: 10px !important;
+    font-weight: bold;
+  }
+  [dir="rtl"] td.mat-cell:first-of-type{
+    padding: 10px !important;
+    font-weight: bold;
+  }
+  .filterClass{
+    font-weight: bold;
+  }
