--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,7 +46,7 @@
                     </mat-expansion-panel>
                 </mat-accordion>
             </li>
-            <li class="nav-item" *ngIf="loginUserName == 'adahabre'">
+            <li class="nav-item" *ngIf="_galitReport">
                 <mat-accordion>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
@@ -55,7 +55,7 @@
                         </mat-expansion-panel-header>
                         <ul>
                             <li>
-                                <a class="nav-link" routerLink="galitpointsreport">ציונים</a>
+                                <a class="nav-link" routerLink="galitpointsreport">רשימת מטופלים</a>
                             </li>
                         </ul>
                     </mat-expansion-panel>
