--- a/src/app/galit-points-report/galit-points-report.component.html
+++ b/src/app/galit-points-report/galit-points-report.component.html
@@ -32,9 +32,9 @@
   </div> -->
 
   <div class="row mt-5" dir="rtl">
-    <div class="col">
-      <mat-form-field appearance="standard">
-        <mat-label>מסנן</mat-label>
+    <div class="col ml-3" style="overflow: auto;">
+      <mat-form-field appearance="standard" style="border-style: outset;text-align: center;">
+        <mat-label class="filterClass">מסנן</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="הקלד מסנן" #input>
       </mat-form-field>
       <table mat-table [dataSource]="dataSource" dir="rtl" class="mat-elevation-z8">
@@ -139,12 +139,12 @@
           <td mat-cell *matCellDef="let element"> {{element.Points}} </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns" [style.background]="'antiquewhite'"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [style.background]="row.Points >= 6 ? 'firebrick' : row.Points >= 2 && row.Points < 6 ? 'yellow': 'white'"></tr>
       </table>
       <div class="row text-center">
         <div class="col">
-          <h1 *ngIf="!patientFound"> ...אוסף נתונים, נא להמתין</h1>
+          <h1 *ngIf="!patientFound"> אוסף נתונים, נא להמתין ...</h1>
         </div>
       </div>
       <mat-progress-bar mode="buffer" *ngIf="!patientFound"></mat-progress-bar>
