--- a/src/app/galit-points-report/galit-points-report.component.html
+++ b/src/app/galit-points-report/galit-points-report.component.html
@@ -33,7 +33,7 @@
 
   <div class="row mt-5" dir="rtl">
     <div class="col ml-3" style="overflow: auto;">
-      <mat-form-field appearance="standard" style="border-style: outset;text-align: center;">
+      <mat-form-field appearance="standard" style="box-shadow: -1px -1px 9px 0px #000;text-align: center;">
         <mat-label class="filterClass">מסנן</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="הקלד מסנן" #input>
       </mat-form-field>
