--- a/src/app/nurses-manage-dashboard/system-manage/system-manage.component.html
+++ b/src/app/nurses-manage-dashboard/system-manage/system-manage.component.html
@@ -1,7 +1,7 @@
 <!-- <img *ngIf="UserName != 'adahabre'" src="https://balko.co.il/wp-content/uploads/2020/02/under-construction-.jpg"
     width="100%" height="100%"> -->
 
-<div class="container" dir="rtl">
+<div class="container" *ngIf="UserName == 'adahabre'" dir="rtl">
     <form dir="rtl" class="form col" [formGroup]="updateBedsGroup">
         <div class="row">
             <div class="col-12 bedsUpdate">
