--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -176,7 +176,7 @@
 
         <ng-container matColumnDef="surgeryname">
             <th mat-header-cell *matHeaderCellDef> שם ניתוח </th>
-            <td mat-cell *matCellDef="let element" style="word-break: break-all;"> {{element.SurgeryName}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.SurgeryName}} </td>
         </ng-container>
 
         <ng-container matColumnDef="date">
