--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -143,7 +143,7 @@
                                 <textarea matInput
                                     style="font-size: 15px;font-family: 'Roboto';font-weight: bolder;font-size: 18px;"
                                     rows="3" placeholder="תוכן הדוח" class="form-control border-1"
-                                    formControlName="ReportText"></textarea>
+                                    formControlName="ReportText" required></textarea>
                             </mat-form-field>
                         </div>
                     </div>
