--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -237,8 +237,19 @@
             <i class="material-icons">home</i>
           </button>
         <span class="mr-3">כניסה מותרת רק ממחשב מורשה</span>
-    </h1>
-    
+    </h1>    
+</ng-template>
+<ng-template #modalContent2 let-close="close">
+    <span class="material-icons" matTooltip="{{privateIP}}" style="color: red;font-size: 60px;float: right;">
+        warning
+    </span>
+    <h1 class="text-center">
+        <button matTooltip="חזרה לדף הבית" mat-raised-button type="submit"
+            class="btn btn-primary btn-raised float-left" [routerLink]="['']" (click)="closeModal()">
+            <i class="material-icons">home</i>
+          </button>
+        <span class="mr-3">השימוש בשם משתמש: <b>כללית</b> אסור, להחליף לשם משתמש אישי. תודה</span>
+    </h1>    
 </ng-template>
 
 <div class="d-none-desktop" dir="rtl">
