--- a/src/app/galit-points-report/galit-points-report.component.html
+++ b/src/app/galit-points-report/galit-points-report.component.html
@@ -39,8 +39,8 @@
           (click)="ngOnInit()">
           <i class="material-icons">refresh</i>
         </button>
-        <button matTooltip="הדפסה" mat-raised-button class="btn btn-raised" style="background: cornflowerblue;float: left;"
-          (click)="print()">
+        <button matTooltip="הדפסה" mat-raised-button class="btn btn-raised"
+          style="background: cornflowerblue;float: left;" (click)="print()">
           <i class="material-icons">print</i>
         </button>
       </div>
