--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -164,8 +164,12 @@
                 class="btn btn-primary btn-raised" (click)="openReportDialog('administrative')">
                 <i class="material-icons">assignment_ind</i>
             </button>
+            <button matTooltip="לדיווח תקלה במערכת" id="EventBtndisplay" mat-raised-button type="submit"
+                class="btn btn-raised mr-1" *ngIf="UserName != 'jubartal'" style="background-color: grey;" (click)="bugReport()">
+                <i class="material-icons">info</i>
+            </button>
             <button matTooltip="החלפה לאחות מחלקה" id="EventBtndisplay" *ngIf="UserName == 'jubartal'" mat-raised-button
-                type="submit" class="btn btn-primary btn-raised" (click)="test()">
+                type="submit" class="btn btn-raised" (click)="test()">
                 <i class="material-icons">face</i>
             </button>
         </div>
@@ -201,6 +205,27 @@
         </div>
     </div>
 </mat-card>
+
+<ng-template #modalBug let-close="close">
+    <button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <h1 mat-dialog-title style="text-align: center;">דיווח תקלה</h1>
+    <hr>
+    <form mat-dialog-content dir="rtl" style="text-align: right;">
+        <mat-form-field class="example-full-width">
+            <mat-label>מספר טלפון לחזרה</mat-label>
+            <input matInput [(ngModel)]="phoneNumber" [ngModelOptions]="{standalone: true}" type="number" placeholder=".......05" required/>
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+            <mat-label>מהות התקלה</mat-label>
+            <textarea matInput rows="6" [(ngModel)]="reportSubject" [ngModelOptions]="{standalone: true}" cols="15" required></textarea>
+        </mat-form-field>
+    </form>
+    <div mat-dialog-actions>
+        <button mat-raised-button color="primary" (click)="submitBugReport()" mat-dialog-close>שליחה</button>
+    </div>
+</ng-template>
 
 <ng-template #modalContent let-close="close">
     <span class="material-icons" matTooltip="{{privateIP}}" style="color: red;font-size: 60px;float: right;">
