--- a/src/app/updateform/updateform.component.html
+++ b/src/app/updateform/updateform.component.html
@@ -14,17 +14,16 @@
                                 </mat-form-field>
                             </div>
                             <div class="form-group mt-2 col-lg-4 col-sm-12">
-                                <mat-form-field appearance="fill">
+                                <mat-form-field class="example-full-width" appearance="fill">
                                     <mat-label>מחלקה</mat-label>
-                                    <mat-select formControlName="departmentControl">
-                                        <mat-option [value]="">
-                                            הכל
-                                        </mat-option>
-                                        <mat-option *ngFor="let dept of department" [value]="dept">
-                                            {{dept}}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
+                                    <input type="text" placeholder="בחר מחלקה" matInput [formControl]="departmentControl"
+                                      [matAutocomplete]="auto">
+                                    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                                      <mat-option *ngFor="let dept of filteredOptions | async" [value]="dept">
+                                        {{dept}}
+                                      </mat-option>
+                                    </mat-autocomplete>
+                                  </mat-form-field>
                             </div>
                         </div>
                         <button mat-raised-button type="submit" (click)="searchForm()"
